package Caroline.Persistence.Models;

import "csharp_options.proto";
option (google.protobuf.csharp_file_options).namespace = "Caroline.Persistence.Models";

option optimize_for = SPEED;

message Game
{
	optional string SaveData = 2;
}