package Caroline.Persistence.Models;

import "csharp_options.proto";
import "GameState.proto";
option (google.protobuf.csharp_file_options).namespace = "Caroline.Persistence.Models";

option optimize_for = SPEED;

message GameSession
{
	// Add session specific fields here.
	// Sessions are transient and expire after not being updated.
	
	// Sessions are uniquely identified by a layer 4 connection:
	// SourceIp:SourcePort:DestinationIp:DestinationPort:GameId

	optional GameState CachedGameState = 1;
	optional RateLimit RateLimit = 2;
}

message RateLimit
{
	optional int64 InitialRequestDate = 1;
	optional int32 Requests = 2;
}
