package Caroline.App.Models;

import "csharp_options.proto";
option (google.protobuf.csharp_file_options).namespace = "Caroline.App.Models";

option optimize_for = SPEED;

message GameState {
	optional bool IsError = 1;
	
	message Item {
		required int32 Id = 1;
		required int32 Quantity = 2;
	}
	repeated Item Items = 2;

	message ChatMessage {
		optional string Text = 1;
		optional string Sender = 2;
		optional string Time = 3;
		optional string Permissions = 4;
	}
	optional ChatMessage Message = 3;

	message Schematic {
		message SchemaItem {
			enum Section{
			NFS = 0;
            ORE = 1;
            GEM = 2;
            INGREDIENT = 3;
            CRAFTING = 4;
            POTION = 5;
			}

			optional int32 Id = 1;
			optional string Name = 2;
			optional int32 Worth = 3;
			optional Section Category=4;
		}
		repeated SchemaItem Items = 1;

		message SchemaStoreItem {
			enum Section {
				MINING=1;
				MACHINES=2;
				GATHERING=3;
				PROCESSING=4;
				ITEMS=5;
				CRAFTING=6;
			}
			optional Section Category=1;
			optional string Name=2;
			optional int32 Price=3;
			optional double Factor=4;
			optional int32 Id=5;
			optional int32 MaxQuantity=6;
		}
		repeated SchemaStoreItem StoreItems=2;
	}
	optional Schematic GameSchema = 4; 

	message StoreItem {
		optional int32 Id = 1;
		optional sint32 Quantity = 2;
	}
	repeated StoreItem StoreItemsUpdate=5;

	message StatItem {
		optional int32 Id = 1;
		optional int32 PrestigeQuantity = 2;
		optional int32 LifeTimeQuantity = 3;
	}
	repeated StatItem StatItemsUpdate=6;

	message ConfigItem {
		optional int32 Id=1;
		optional bool Enabled=2;
	}
	repeated ConfigItem ConfigItems=7;
} 

